Fix FMOD for windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ set(Neko_FMOD ON CACHE BOOL "Activate FMOD")
 set(Neko_Freetype ON CACHE BOOL "Activate Freetype")
 set(Neko_GLES3 ON CACHE BOOL "Activate OpenGL ES 3.0")
 set(Neko_ImGui ON CACHE BOOL "Activate ImGui")
-set(Neko_KTX ON CACHE BOOL "Activate KTX")
+set(Neko_KTX OFF CACHE BOOL "Activate KTX")
 set(Neko_PhysFS ON CACHE BOOL "Activate PhysFS Wrapper")
 set(Neko_PhysX ON CACHE BOOL "Activate PhysX")
 set(Neko_Profile OFF CACHE BOOL "Activate Profiling with Easy Profile")
@@ -94,7 +94,7 @@ if (Neko_FMOD)
     add_compile_definitions("NEKO_FMOD=1")
     set(FMOD_ROOT "${EXTERNAL_DIR}/FMOD" CACHE STRING "")
     if (WIN32)
-        include_directories("${FMOD_ROOT}/win64/inc")
+        include_directories("${FMOD_ROOT}/win_x64/inc")
     elseif (UNIX)
         include_directories("${FMOD_ROOT}/linux_x86_64/inc")
     endif ()
