--- a/common/vulkan_wrapper/CMakeLists.txt
+++ b/common/vulkan_wrapper/CMakeLists.txt
@@ -1,6 +1,9 @@
 
 #vulkan
-LIST(APPEND VULKAN_WRAPPER_LIBS Neko_Core sdl_engine ktx)
+LIST(APPEND VULKAN_WRAPPER_LIBS Neko_Core sdl_engine)
+if (Neko_KTX)
+    list(APPEND VULKAN_WRAPPER_LIBS ktx)
+endif ()
 
 find_package(Vulkan REQUIRED)
 include_directories(${VULKAN_INCLUDE_DIR})
